# Cengine

./: CMakeLists.txt  build.bat  matrix.s
include/cengine/core/: input.h  shader.h  window.h
include/cengine/math/: math_helpers.h  matrix.h  vector_math.h
samples/test/: CMakeLists.txt
samples/test/cengine/: String.h  input.h  preprocessor.h  string_utils.h  vector_math.h  window.h
samples/test/cengine/core/: shader.h
samples/test/cengine/math/: matrix.h  vector_math.h
samples/test/cengine/utils/: string_utils.h
samples/test/resources/shaders/: test.vs
samples/test/src/: main.c
src/: input.c  string_utils.c  window.c
src/core/: input.c  shader.c  window.c
src/math/: math_helpers.c  matrix.c  matrix.h  vector_math.c
src/utils/: string_utils.c
